# TomFi-DesktopApp

./: .env.example  .gitignore  CMakeLists.txt  README.md  env.cpp  env.hpp  gtk_hello  licence.md  main.cpp  style.css  welcome.cpp  welcome.h
Session/: Session.cpp  Session.hpp
backend-node/: db.ts  db_types.ts  package-lock.json  package.json  tsconfig.json
backend-node/2fa/2fa-login/: server.ts
backend-node/2fa/Check/: server.ts
backend-node/2fa/Create/: server.ts
dashboard/: dashboard.cpp  dashboard.h
dashboard/Transaction/: transaction.cpp  transaction.h
dashboard/chart/: chart.cpp  chart.h  chart.html  longChart.cpp  longChart.h  longChart.html
dashboard/settings/: settings.cpp  settings.h
dashboard/wallet/: wallet.cpp  wallet.h
db/: database.cpp  database.h
discord-activity/: discord_integration.cpp  discord_integration.h
login/: login_page.cpp  login_page.h
login/2fa-page/: 2fa_verify.cpp  2fa_verify.h
register/: register.h  register_page.cpp
